<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:text="@string/hElegidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:textSize="18sp" />

            <ListView
                android:layout_height="150dp"
                android:id="@+id/listView4"
                android:layout_width="match_parent" />

            <TextView
                android:text="@string/bElegidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textSize="18sp"
                android:layout_below="@+id/appbar"
                android:layout_toStartOf="@+id/total"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="18dp" />

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/listView3"
                android:layout_marginTop="52dp"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_height="150dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView18"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/total"
                    android:layout_weight="1"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/sym_action_call"
        android:id="@+id/btnLlamar"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:fabSize="normal"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/facebook" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/facebook"
        android:id="@+id/facebook"
        app:backgroundTint="?attr/actionModeSplitBackground"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginBottom="15dp" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/carrito"
        android:id="@+id/carrito"
        android:layout_alignBottom="@+id/btnLlamar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="43dp"
        android:layout_alignTop="@+id/btnLlamar"
        android:onClick="download"
        android:layout_toEndOf="@+id/total" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs3"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>


</RelativeLayout>
